:bug: fixed select all button alignment in page level date picker

--- a/components/tableV2/table/tableFilters/TableFilters.module.scss
+++ b/components/tableV2/table/tableFilters/TableFilters.module.scss
@@ -169,4 +169,9 @@
 
 .column-dropdown-popper {
 	width: 20rem !important;
+	li {
+		&:nth-child(1) {
+			padding-left: 1.875rem;
+		}
+	}
 }
